--- a/problems/similarities-less/similarities.adoc
+++ b/problems/similarities-less/similarities.adoc
@@ -153,7 +153,7 @@ See http://cdn.cs50.net/2017/fall/psets/6/similarities/inputs/ for sample inputs
 === `check50`
 
 ```
-check50 --local similarities/less@minprog/checks
+check50 minprog/cs50x/2019/similarities/less
 ```
 
 === `style50`
