--- a/problems/similarities-more/similarities.adoc
+++ b/problems/similarities-more/similarities.adoc
@@ -144,7 +144,7 @@ See http://cdn.cs50.net/2017/fall/psets/6/similarities/inputs/ for sample inputs
 === `check50`
 
 ```
-check50 --local similarities/more@minprog/checks
+check50 minprog/cs50x/2019/similarities/more
 ```
 
 === `style50`
