--- a/problems/sentimental/sentimental.adoc
+++ b/problems/sentimental/sentimental.adoc
@@ -17,18 +17,18 @@
 . Implement the below exactly as specified but in Python:
 +
 --
-* https://prog1.mprog.nl/problems/mario-more[Mario], more comfortable, in `module7/mario/mario.py`
+* https://prog1.mprog.nl/problems/mario-more[Mario], hacker edition, in `module7/mario/mario.py`
 --
 +
 . Implement the below exactly as specified but in Python:
 +
 --
-* https://prog1.mprog.nl/problems/greedy[Greedy], less comfortable, in `module7/cash/cash.py`
+* https://prog1.mprog.nl/problems/greedy[Greedy], in `module7/cash/cash.py`
 --
 . Implement the below exactly as specified but in Python:
 +
 --
-* https://prog1.mprog.nl/problems/vigenere[Vigenère], less comfortable, in `module7/vigenere/vigenere.py`
+* https://prog1.mprog.nl/problems/vigenere[Vigenère], in `module7/vigenere/vigenere.py`
 --
 
 == Walkthroughs
