--- a/problems/bleep/bleep.adoc
+++ b/problems/bleep/bleep.adoc
@@ -23,7 +23,7 @@ What message would you like to censor?
 
 Here's how to download this problem's "distribution code" (i.e., starter code) into your own CS50 IDE. Log into link:https://cs50.io/[CS50 IDE] and then, in a terminal window, execute each of the below.
 
-1. Execute `cd ~/pset6` to ensure that you're in `~/pset6` (i.e., a directory called `pset6` that's in your home directory, aka `~`). If you haven't yet created that directory, create it now (remember how?).
+1. Execute `cd ~/module7` to ensure that you're in `~/module7` (i.e., a directory called `pset6` that's in your home directory, aka `~`). If you haven't yet created that directory, create it now (remember how?).
 1. Execute `wget http://cdn.cs50.net/2018/fall/psets/6/bleep/bleep.zip` to download a (compressed) ZIP file with this problem's distribution.
 1. Execute `unzip bleep.zip` to uncompress that file.
 1. Execute `rm bleep.zip` followed by `yes` or `y` to delete that ZIP file.
