--- a/problems/survey/survey.adoc
+++ b/problems/survey/survey.adoc
@@ -25,8 +25,8 @@ video::0zIpv_dbaSQ[youtube]
 Here's how to download this problem's distribution into your own CS50 IDE. Log into link:https://cs50.io/[CS50 IDE] and then, in a terminal window, execute each of the below.
 
 1. Execute `cd` to ensure that you're in `~/` (i.e., your home directory, aka `~`).
-1. Execute `mkdir pset7` to make (i.e., create) a directory called `pset7` in your home directory, if you haven't already done so.
-1. Execute `cd pset7` to change into (i.e., open) that directory.
+1. Execute `mkdir module10` to make (i.e., create) a directory called `module10` in your home directory, if you haven't already done so.
+1. Execute `cd module10` to change into (i.e., open) that directory.
 1. Execute `wget http://cdn.cs50.net/2018/fall/psets/7/survey/survey.zip` to download a (compressed) ZIP file with this problem's distribution.
 1. Execute `unzip survey.zip` to uncompress that file.
 1. Execute `rm survey.zip` followed by `yes` or `y` to delete that ZIP file.
