--- a/problems/adventure/adventure.adoc
+++ b/problems/adventure/adventure.adoc
@@ -1,8 +1,3 @@
----
-layout: 2018/spring
-toclevels: 1
----
-
 = Adventure
 
 == tl;dr
@@ -67,7 +62,7 @@ Use these items to pass otherwise unpassable blockades, such as the "strong stee
 
 [source,subs="macros"]
 ----
-$ wget https://cs50x.mprog.nl/course/problems/adventure/adventure.zip
+$ wget https://prog2.mprog.nl/course/problems/adventure/adventure.zip
 $ unzip adventure.zip
 $ rm adventure.zip
 $ cd adventure
