--- a/problems/adventure-more/adventure.adoc
+++ b/problems/adventure-more/adventure.adoc
@@ -602,7 +602,7 @@ And finally, you may use the commands in this link:/course/problems/adventure/wi
 === `check50`
 
 ```
-check50 --local adventure@minprog/checks
+check50 minprog/cs50x/2019/adventure/less
 ```
 
 === `style50`
